# ihatechess

./: .gitignore  pyproject.toml
data/: model_weights.h5
ihatechess/chess/: board.py  utils.py
ihatechess/chess/pieces/: bishop.py  king.py  knight.py  pawn.py  piece.py  queen.py  rook.py
ihatechess/example/: main.py
ihatechess/mcts/: data_generator.py  mcts.py  utils.py
ihatechess/model/: chessnet.py  converter.py
ihatechess/training/: trainer.py
