[tool.poetry]
name = "ihatechess"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pytest = "^7.3.1"
pygame = "^2.4.0"
svgwrite = "^1.4.3"
ipython = "^8.13.2"
torch = "^2.0.1"
coremltools = "^6.3.0"
matplotlib = "^3.7.1"
numpy = ">=1.22,<1.24"
tensorflow-macos = "^2.12.0"
pathos = "^0.3.0"
taichi = "^1.6.0"
tensorflow-metal = "^0.8.0"
numba = "^0.57.0"
h5py = "^3.8.0"
python-chess = "^1.999"
tf2onnx = "^1.14.0"
onnxruntime = "^1.15.0"
cairosvg = "^2.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
